# TrafficSimulation

./: .gitignore  INSTRUCTIONS.html  README.md  airtrafficsim.yml
ATS_XPlane_Bridge/Project/AI_XPlane_Bridge/: CMakeLists.txt  Makefile  Makefile_test  README.md  exports.txt
ATS_XPlane_Bridge/Project/AI_XPlane_Bridge/build-lin/: AI_XPlane_Bridge.xpl  CMakeCache.txt  Makefile  cmake_install.cmake
ATS_XPlane_Bridge/Project/AI_XPlane_Bridge/build-win/: AI_XPlane_Bridge.sln  AI_XPlane_Bridge.vcxproj  AI_XPlane_Bridge.vcxproj.filters  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
ATS_XPlane_Bridge/Project/AI_XPlane_Bridge/build-win/AI_XPlane_Bridge.dir/Release/: AI_XPlane_Bridge.xpl.recipe
ATS_XPlane_Bridge/Project/AI_XPlane_Bridge/build-win/AI_XPlane_Bridge.dir/Release/AI_XPlane_Bridge.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
ATS_XPlane_Bridge/Project/AI_XPlane_Bridge/build-win/Release/: AI_XPlane_Bridge.exp  AI_XPlane_Bridge.lib
ATS_XPlane_Bridge/Project/AI_XPlane_Bridge/include/: Logger.h  UdpReceiver.h  UdpSender.h
ATS_XPlane_Bridge/Project/AI_XPlane_Bridge/src/: AircraftManager.cpp  AircraftManager.h  FsdServer.cpp  FsdServer.h  InstanceRenderer.cpp  InstanceRenderer.h  PlayerReader.cpp  PlayerReader.h  Plugin.cpp  UdpReceiver.cpp  UdpSender.cpp
ATS_XPlane_Bridge/Project/AI_XPlane_Bridge/test/AI_XPlane_Bridge/64/: lin.xpl
ATS_XPlane_Bridge/Project/AI_XPlane_Bridge/test/obj64/src/: AircraftManager.cppdep  PlayerReader.cppdep  Plugin.cppdep  UdpReceiver.cppdep  UdpSender.cppdep
(+32 files in other folders)
